--- a/NodeConsoleApp1/.vscode/launch.json
+++ b/NodeConsoleApp1/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": [ "<node_internals>/**" ],
-      "program": "tsscrpt/qryTst.js",
+      "program": "${relativeFile}",
       "cwd": "${workspaceFolder}",
       "console": "externalTerminal"
     }
